syntax = "proto3";
package modelservice;

service ModelService {
  rpc Health(HealthRequest) returns (HealthResponse) {}
  rpc ListModelClasses(Empty) returns (ModelClassesResponse) {}
  rpc ListModels(Empty) returns (ListModelsResponse) {}
  rpc Train(TrainRequest) returns (TrainResponse) {}
  rpc Predict(PredictRequest) returns (PredictResponse) {}
  rpc Retrain(RetrainRequest) returns (TrainResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message Empty {}

message HealthRequest { string api_key = 1; }
message HealthResponse { string status = 1; }

message ModelClassesResponse { repeated string classes = 1; }

message TrainRequest {
  string api_key = 1;
  string model_class = 2;
  map<string, string> hyperparams = 3; // как строки; клиент их парсит в нужные типы
  repeated FloatArray X = 4;
  repeated int32 y = 5;
  string model_name = 6;
}

message FloatArray { repeated double values = 1; }

message TrainResponse {
  string model_id = 1;
  string model_class = 2;
  string model_name = 3;
  map<string, double> metrics = 4;
}

message PredictRequest {
  string api_key = 1;
  string model_id = 2;
  repeated FloatArray X = 3;
}

message PredictResponse {
  repeated int32 predictions = 1;
  repeated ProbRow proba = 2; // может быть пустым
}

message ProbRow { repeated double values = 1; }

message RetrainRequest {
  string api_key = 1;
  string model_id = 2;
  repeated FloatArray X = 3;
  repeated int32 y = 4;
  map<string, string> hyperparams = 5;
}

message DeleteRequest { string api_key = 1; string model_id = 2; }
message DeleteResponse { string status = 1; string model_id = 2; }

message ListModelsResponse {
  repeated ModelInfo items = 1;
}

message ModelInfo {
  string model_id = 1;
  string model_class = 2;
  string model_name = 3;
}